force-app/main/default/objects/BMCServiceDesk__ScanSchedule__c/BMCServiceDesk__ScanSchedule__c.object-meta.xml
<CustomObject>
    <label>Scan Schedule</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scan Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>