force-app/main/default/objects/BMCServiceDesk__ScanSchedule__c/fields/BMCServiceDesk__FKScanDetail__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKScanDetail__c</fullName>
    <description>To store reference of the scan with which the scan schedule is associated.</description>
    <label>Scan Detail</label>
    <referenceTo>BMCServiceDesk__ScanDetail__c</referenceTo>
    <relationshipLabel>Scan Schedules</relationshipLabel>
    <relationshipName>ScanSchedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>