force-app/main/default/objects/BMCServiceDesk__ScanSchedule__c/fields/BMCServiceDesk__RecurrenceHours__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__RecurrenceHours__c</fullName>
    <description>To store frequency in hours ( 0 to 23)</description>
    <label>Recurrence Hours</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>