force-app/main/default/objects/BMCServiceDesk__ScanSchedule__c/fields/BMCServiceDesk__RecurrenceMinutes__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__RecurrenceMinutes__c</fullName>
    <description>To store frequency in Minutes (0 to 59)</description>
    <label>Recurrence Minutes</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>