force-app/main/default/objects/BMCServiceDesk__ScanSchedule__c/fields/BMCServiceDesk__RecurrenceType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__RecurrenceType__c</fullName>
    <description>To store the type of frequency of the scan schedule.</description>
    <label>Recurrence Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>