force-app/main/default/objects/BMCServiceDesk__ScanSchedule__c/fields/BMCServiceDesk__RecurrenceWeek__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__RecurrenceWeek__c</fullName>
    <label>Recurrence Week</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>