force-app/main/default/objects/BMCServiceDesk__ScanSchedule__c/fields/BMCServiceDesk__ScheduleId__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ScheduleId__c</fullName>
    <description>To store the Id of the scan schedule.</description>
    <label>Schedule Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>