force-app/main/default/objects/BMCServiceDesk__ScanSchedule__c/fields/BMCServiceDesk__ScheduleType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ScheduleType__c</fullName>
    <description>To store type of the scan schedule.</description>
    <label>Schedule Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Do not scan</fullName>
            </value>
            <value>
                <fullName>Immediately, one time</fullName>
            </value>
            <value>
                <fullName>Recurrence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>