force-app/main/default/objects/BMCServiceDesk__ScanSchedule__c/fields/BMCServiceDesk__StartDurationType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__StartDurationType__c</fullName>
    <description>To store the type of start execution.</description>
    <label>Start Duration Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Immediately</fullName>
            </value>
            <value>
                <fullName>At specific date and time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>