force-app/main/default/objects/BMCServiceDesk__ScanSchedule__c/fields/BMCServiceDesk__StopDurationType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__StopDurationType__c</fullName>
    <label>Stop Duration Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No end date</fullName>
            </value>
            <value>
                <fullName>At specific date and time</fullName>
            </value>
            <value>
                <fullName>After recurrence count</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>